// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Core/HighlightedName Default 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 hExPlF sc-eFegNN gAaKNc"
  >
    <span
      class="sc-fKVqWL hOcWtv sc-iwjdpV csrXjq sc-GEbAx cVEuIT sc-gsNilK dlEAUa"
    >
      Frontend Service
    </span>
  </div>
</div>
`;

exports[`Storyshots Core/HighlightedName With Custom Colors 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 hExPlF sc-eFegNN gAaKNc"
  >
    <span
      class="sc-fKVqWL hOcWtv sc-iwjdpV vGMJF sc-GEbAx cVEuIT sc-gsNilK dhNLzR"
    >
      Frontend Service
    </span>
  </div>
</div>
`;
